# MoneyWatcherAlpha

./: .autotools  .cproject  .gitignore  .project  AUTHORS  Makefile.am  NEWS  README  aclocal.m4  config.h.in  config.status  configure.ac  libtool
exampleProgram/: Makefile.am  exampleProgram.c
include/: Makefile.am  common.h  cycle_table.h  daily_table.h  datetime.h  entry.h  exception.h  hash.h  idatabase.h  libmoneywatcher.h  logger.h  policy.h  policy_status.h  policy_table.h  record.h  serializable.h  service.h  singleton.h  status.h  table_manager.h  test_access_class.h  types.h  unistring.h
libmoneywatcher/: Makefile.am  libmoneywatcher.c
main/: Makefile.am  app_dialog.cc  dialog.pro  main.cc  main.pro  main_window.cc
main/console/: Makefile.am  main.cc
main/console/src/: Makefile.am  engine.cc  engine.h
main/gui/: app_dialog.cc  main.cc
main/gui/src/: Makefile.am
main/include/: app_dialog.h  engine.h  main_window.h
main/src/: Makefile.am  dialog.pro  engine.cc
sqlite3/: Makefile.am  sqlite_driver.cc  sqlite_driver.h
src/: Makefile.am  cycle_table.cc  daily_table.cc  datetime.cc  entry.cc  idatabase.cc  logger.cc  policy.cc  policy_status.cc  policy_table.cc  record.cc  service.cc  status.cc  table_manager.cc  test_access_class.cc  unistring.cc
tests/: Makefile.am
tests/core/: Makefile.am  test_access_class.cc  test_access_class.h  test_all.cc  test_fixture.h  test_include_all.h
utf8/: Makefile.am  utf8.h
