# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = common.h \
				  logger.h \
				  serializable.h \
				  cycle_table.h \
				  daily_table.h \
				  datetime.h \
				  entry.h \
				  hash.h \
				  record.h \
				  status.h \
				  types.h \
				  $(top_srcdir)/sqlite3/sqlite3.h
