# These files will end up in the install include directory
# For example, /usr/include
include_HEADERS = common.h \
				  cycle_table.h \
				  daily_table.h \
				  datetime.h \
				  entry.h \
				  hash.h \
				  idatabase.h \
				  logger.h \
				  record.h \
				  serializable.h \
				  service.h \
				  singleton.h \
				  status.h \
				  $(top_srcdir)/sqlite3/sqlite3.h \
				  types.h \
				  unistring.h
